este es el 3er commit

--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>EJERCICIO LECCION 6 DE GIT</h1>
     <h2>trabajando en la nueva version</h2>
+    <h3>codigo en la nueva rama</h3>
 </body>
 </html>
